r is an optional attribute in c and r, fdo#65059

Change-Id: Ic954cc5692ddc899f8a6fa99466bc0c8a83da352
Reviewed-on: https://gerrit.libreoffice.org/4088
Reviewed-by: David Tardon <dtardon@redhat.com>
Tested-by: David Tardon <dtardon@redhat.com>